<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
    	android:id="@+id/textView1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/username" />

	<EditText
    	android:id="@+id/editText1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:ems="10"
    	android:inputType="text" >

    	<requestFocus />
	</EditText>

	<TextView
    	android:id="@+id/textView2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/password" />

	<EditText
    	android:id="@+id/editText2"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:ems="10"
    	android:inputType="textPassword" />

	<TextView
    	android:id="@+id/textView7"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/confirmpassword" />

	<EditText
    	android:id="@+id/editText7"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:ems="10"
    	android:inputType="textPassword" />

	<TextView
    	android:id="@+id/textView3"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/name" />

	<EditText
    	android:id="@+id/editText3"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:ems="10"
    	android:inputType="textPersonName" />

	<TextView
    	android:id="@+id/textView4"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cardnumber" />

	<EditText
    	android:id="@+id/editText4"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:ems="10"
    	android:inputType="numberSigned" />

	<TextView
    	android:id="@+id/textView5"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/carddate" />

	<EditText
    	android:id="@+id/editText5"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:ems="10"
    	android:inputType="date" />

	<TextView
    	android:id="@+id/textView6"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cardtype" />

	<EditText
    	android:id="@+id/editText6"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:ems="10"
    	android:inputType="text" />

	<Button
    	android:id="@+id/button1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:onClick="register"
    	android:text="@string/checkReg" />

</LinearLayout>


